# park-mail-ru-C-app-Overflow

./: CMakeLists.txt  README.md  info.xml  main  overflow.db
lib/Front/: CMakeLists.txt  README.md
lib/Front/include/: object_widget.h  searchbox.h  server.h  settings.h
lib/Front/src/: server.cpp  settings.cpp
lib/Front/tests/: CMakeLists.txt
lib/Front/tests/include/: test.h
lib/Front/tests/src/: test.cpp
lib/Front/uml/: UML.drawio
lib/Parser/: CMakeLists.txt
lib/Parser/lib/ArgumentsParser/: CMakeLists.txt
lib/Parser/lib/ArgumentsParser/include/: ArgumentsParser.h
lib/Parser/lib/ArgumentsParser/src/: ArgumentsParser.cpp
lib/Parser/lib/JsonReader/: CMakeLists.txt
lib/Parser/lib/JsonReader/include/: JsonReader.h
lib/Parser/lib/JsonReader/src/: JsonReader.cpp
lib/Parser/lib/JsonReader/tests/: CMakeLists.txt
lib/Parser/lib/JsonReader/tests/src/: JsonReader_test.cpp
lib/Parser/lib/UrlsReader/: CMakeLists.txt
lib/Parser/lib/UrlsReader/include/: IUrlsReader.h  UrlsReader.h
lib/Parser/lib/UrlsReader/src/: UrlsReader.cpp
lib/Parser/lib/UrlsReader/tests/: CMakeLists.txt
lib/Parser/lib/UrlsReader/tests/src/: UrlsReader_test.cpp
lib/Parser/src/: main.cpp
lib/Selector/: CMakeLists.txt
lib/Selector/include/: FlatAndTravelTime.h  FlatSelector.h  JsonParser.h  Selector.h  SelectorException.h  TravelTimeGetter.h
lib/Selector/src/: FlatSelector.cpp  JsonParser.cpp  TravelTimeGetter.cpp
lib/datalib/: CMakeLists.txt
lib/datalib/include/: database.h  db_config.h  db_exception.h  flat.h  flat_params.h  sqlite_database.h
lib/datalib/src/: db_exception.cpp  flat.cpp  flat_params.cpp  sqlite_database.cpp
lib/datalib/tests/: CMakeLists.txt
lib/datalib/tests/src/: test_database_params.cpp  test_flat.cpp  test_pg_database.cpp  test_user.cpp
src/: main.cpp
